...
    "limit": 20,
    "total": 1493,
    "count": 20,
    "results": [
      {
        "id": 1011334,
        "name": "3-D Man",
        "description": "",
        "modified": "2014-04-29T14:18:17-0400",
        "thumbnail": {
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784",
          "extension": "jpg"
        },
...
            "url": "http://marvel.com/comics/characters/1017100/a-bomb_has?utm_campaign=apiRef&utm_source=2b78d362481839c76e3df81e3b13d6e5"
          }
        ]
      },
      {
        "id": 1009144,
        "name": "A.I.M.",
        "description": "AIM is a terrorist organization bent on destroying the world.",
        "modified": "2013-10-17T14:41:30-0400",
        "thumbnail": {
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/6/20/52602f21f29ec",
          "extension": "jpg"
        },
...
            "url": "http://marvel.com/comics/characters/1009144/aim.?utm_campaign=apiRef&utm_source=2b78d362481839c76e3df81e3b13d6e5"
          }
        ]
      },
      {
        "id": 1010699,
        "name": "Aaron Stack",
        "description": "",
        "modified": "1969-12-31T19:00:00-0500",
        "thumbnail": {
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available",
          "extension": "jpg"
        },
...
            "url": "http://marvel.com/comics/characters/1016823/abomination_ultimate?utm_campaign=apiRef&utm_source=2b78d362481839c76e3df81e3b13d6e5"
          }
        ]
      },
      {
        "id": 1009148,
        "name": "Absorbing Man",
        "description": "",
        "modified": "2013-10-24T14:32:08-0400",
        "thumbnail": {
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/1/b0/5269678709fb7",
          "extension": "jpg"
        },
...
            "url": "http://marvel.com/comics/characters/1010846/aegis_trey_rollins?utm_campaign=apiRef&utm_source=2b78d362481839c76e3df81e3b13d6e5"
          }
        ]
      },
      {
        "id": 1011297,
        "name": "Agent Brand",
        "description": "",
        "modified": "2013-10-24T13:09:30-0400",
        "thumbnail": {
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/4/60/52695285d6e7e",
          "extension": "jpg"
        },
...
        "modified": "2015-10-27T16:38:23-0400",
        "isbn": "",
        "upc": "5960606084-01911",
        "diamondCode": "SEP082362",
        "ean": "",
        "issn": "",
        "format": "Comic",
        "pageCount": 32,
        "textObjects": [
          {
            "type": "issue_preview_text",
            "language": "en-us",
            "text": "Join 3-D MAN, CLOUD 9, KOMODO, HARDBALL, and heroes around America in the battle that will decide the fate of the planet and the future of the Initiative program. Will the Kill Krew Army win the day?"
...
