...
            
            sessionProvider.request(type: Response.self, service: MarvelService.series(id: result.id), completion: { [weak self] (response) in
                switch response {
                case let .success(response):
                    DispatchQueue.main.async {
                        if let results = response.data?.results {
                            self?.seriesCell.set(title: "Series", comics: results)
                            if let cell = self?.seriesCell {
                                self?.cells.append(cell)
                            }
                        }
                    }
                case .failure(_):
...
